--- a/Campex/Views/home.ejs
+++ b/Campex/Views/home.ejs
@@ -36,8 +36,8 @@
          <main class="px-3">
             <h1>CAMPEX</h1>
             <p class="lead">
-               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat ut quidem ullam repellat quod, natus praesentium facilis debitis
-               perspiciatis iusto.
+               Welcome to CAMPEX! <br />
+               Jump right in and explore our many campgrounds. <br> Feel free to share some of your own and comment on others!
             </p>
             <a href="/campgrounds" class="btn btn-large btn-secondary font-weight-bold text-white bg-white">View Campgrounds</a>
          </main>
